
syntax = "proto3";

option java_package = "com.imageworks.spcue.RqdGrpc";
option java_multiple_files = true;
package rqd;

import "cue.proto";


service RqdStatic {

    rpc launchFrame(RunFrame) returns (LaunchFrameResponse) {}
    rpc reportStatus(ReportStatusParams) returns (cue.HostReport) {}
    rpc getRunningFrameStatus(RunningFrameParams) returns (cue.RunningFrameInfo) {}
    rpc killRunningFrame(RunningFrameParams) returns (KillResponse) {}
    rpc shutdownRqdNow(ShutdownNowParams) returns (ShutdownNowResponse) {}
    rpc shutdownRqdIdle(ShutdownIdleParams) returns (ShutdownIdleResponse) {}
    rpc restartRqdNow(RestartNowParams) returns (RestartNowResponse) {}
    rpc restartRqdIdle(RestartIdleParams) returns (RestartIdleResponse) {}
    rpc rebootNow(RebootNowParams) returns (RebootNowResponse) {}
    rpc rebootIdle(RebootIdleParams) returns (RebootIdleParams) {}
    rpc nimbyOn(NimbyOnParams) returns (NimbyOnResponse) {}
    rpc nimbyOff(NimbyOffParams) returns (NimbyOffResponse) {}
    rpc lock(LockInfo) returns (LockResponse) {}
    rpc lockAll(LockAllInfo) returns (LockAllResponse) {}
    rpc unlock(UnlockInfo) returns (UnlockResponse) {}
    rpc unlockAll(UnlockAllInfo) returns (UnlockAllResponse) {}
}


enum ErrorCode {
    success = 0;
    unknown = 1;
}


message LaunchFrameResponse {
    ErrorCode status = 1;
    string message = 2;
}


message LockInfo {
    int32 cores = 1;
}


message LockResponse {
    ErrorCode status = 1;
    string message = 2;
}

message LockAllInfo {}


message LockAllResponse {
    ErrorCode status = 1;
    string message = 2;
}


message KillResponse {
    ErrorCode status = 1;
    string message = 2;
}


message NimbyOffParams {}


message NimbyOffResponse {
    ErrorCode status = 1;
    string message = 2;
}


message NimbyOnParams {}


message NimbyOnResponse {
    ErrorCode status = 1;
    string message = 2;
}


message RebootIdleParams {}


message RebootIdleResponse {
    ErrorCode status = 1;
    string message = 2;
}


message RebootNowParams {}


message RebootNowResponse {
    ErrorCode status = 1;
    string message = 2;
}


message ReportStatusParams {}


message RestartIdleParams {}


message RestartIdleResponse {
    ErrorCode status = 1;
    string message = 2;
}


message RestartNowParams {}


message RestartNowResponse {
    ErrorCode status = 1;
    string message = 2;
}


message RunFrame {
    string resourceId = 1;
    string jobId = 2;
    string jobName = 3;
    string frameId = 4;
    string frameName = 5;
    string layerId = 6;
    string command = 7;
    string userName = 8;
    string logDir = 9;
    string show = 10;
    string shot = 11;
    int64 startTime = 12;
    int32 uid = 13;
    int32 numCores = 14;
    bool ignoreNimby = 15;
    map<string, string> environment = 16;
    map<string, string> attributes = 17;
}


message RunningFrameParams {
    string frameId = 1;
}


message ShutdownIdleParams {}


message ShutdownIdleResponse {
    ErrorCode status = 1;
    string message = 2;
}


message ShutdownNowParams {}


message ShutdownNowResponse {
    ErrorCode status = 1;
    string message = 2;
}


message UnlockInfo {
    int32 cores = 1;
}


message UnlockResponse {
    ErrorCode status = 1;
    string message = 2;
}


message UnlockAllInfo {}


message UnlockAllResponse {
    ErrorCode status = 1;
    string message = 2;
}
